--- a/client/templates/tasks/tasks.html
+++ b/client/templates/tasks/tasks.html
@@ -1,22 +1,20 @@
 <template name="tasks">
-	{{#if anyTasks}}
-	<ul id="task-collection" class="collection with-header">
-
-		<li class="collection-header">
-			<h4>
-				<i class="mdi-action-assignment left"></i>
-				Your Tasks 
-				<a href="#" class="filter-tasks black-text"><i class="mdi-content-filter-list right"></i></a>
-			</h4>
-		</li>
-
-		{{#each task}}
-		{{> taskCollectionElement}}
-		{{/each}}
-	</ul>
-	{{else}}
-	<p>You don't have any tasks yet! Create one by pushing that big red button down there.</p>
-	{{/if}}
+	<div class="card-panel">
+		{{#if anyTasks}}
+		<h4>
+			<i class="mdi-action-assignment left"></i>
+			Your Tasks 
+			<a href="#" class="filter-tasks black-text"><i class="mdi-content-filter-list right"></i></a>
+		</h4>
+		<ul id="task-collection" class="row collection">
+			{{#each task}}
+			{{> taskCollectionElement}}
+			{{/each}}
+		</ul>
+		{{else}}
+		<p>You don't have any tasks yet! Create one by pushing that big red button down there.</p>
+		{{/if}}
+	</div>
 	{{> newTaskButton}}
 </template>
 
