removed buttons from modal footer

--- a/client/templates/modals/deleteTagModal.html
+++ b/client/templates/modals/deleteTagModal.html
@@ -3,6 +3,6 @@
 </template>
 
 <template name="deleteTagModalFooter">
-	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
-	<a href="#" class="delete-tag waves-effect waves-green btn-flat right">Delete Tag</a>
+	<a href="#" class="close-modal black-text left">Cancel</a>
+	<a href="#" class="delete-tag black-text right">Delete Tag</a>
 </template>
