--- a/client/templates/modals/completeTaskModal.html
+++ b/client/templates/modals/completeTaskModal.html
@@ -18,7 +18,7 @@
 </template>
 
 <template name="completeTaskModalFooter">
-	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
-	<a href="#" class="complete-task waves-effect waves-green btn-flat right">Complete Task</a>
-	<a href="#" class="submit-backdate-task waves-effect waves-green btn-flat right hidden">Backdate Task</a>
+	<a href="#" class="close-modal black-text left">Cancel</a>
+	<a href="#" class="complete-task black-text right">Complete Task</a>
+	<a href="#" class="submit-backdate-task black-text right hidden">Backdate Task</a>
 </template>
