--- a/client/templates/modals/deleteTaskModal.html
+++ b/client/templates/modals/deleteTaskModal.html
@@ -3,6 +3,6 @@
 </template>
 
 <template name="deleteTaskModalFooter">
-	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
-	<a href="#" class="delete-task waves-effect waves-green btn-flat right">Delete Task</a>
+	<a href="#" class="close-modal black-text left">Cancel</a>
+	<a href="#" class="delete-task black-text right">Delete Task</a>
 </template>
