--- a/client/templates/modals/editTaskModal.html
+++ b/client/templates/modals/editTaskModal.html
@@ -83,6 +83,6 @@
 
 </template>
 <template name="editTaskModalFooter">
-	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
-	<a href="#" class="edit-task waves-effect waves-green btn-flat right">Edit Task</a>
+	<a href="#" class="close-modal black-text left">Cancel</a>
+	<a href="#" class="edit-task black-text right">Edit Task</a>
 </template>
