index calendar card id

--- a/client/templates/index/index.html
+++ b/client/templates/index/index.html
@@ -3,7 +3,7 @@
 	{{> welcomeMessage}}
 	{{/if}}
 	{{#if anyDue}}
-	<div class="card-panel">
+	<div id="calendar-card" class="card-panel">
 	{{> calendar}}
 	</div>
 	{{/if}}
