--- a/client/templates/tasks/tasks.html
+++ b/client/templates/tasks/tasks.html
@@ -1,13 +1,22 @@
 <template name="tasks">
 	<div class="card-panel">
 		{{#if anyTasks}}
+		<div id="task-filters" class="row hidden">
+			<h4 class="">
+			<i class="mdi-content-filter-list left"></i>
+			Filters
+				<a href="#" class="hide-task-filters black-text right"><i class="mdi-navigation-expand-less medium right"></i></a>				
+			</h4>
+			{{> taskFilters}}
+		</div>
 		<div class="row">
 			<h4>
 				<i class="mdi-action-assignment left"></i>
 				Your Tasks 
-				<a href="#" class="filter-tasks black-text"><i class="mdi-content-filter-list right"></i></a>
+				<a href="#" class="show-task-filters black-text right"><i class="mdi-content-filter-list right"></i></a>
 			</h4>
 		</div>
+
 		<ul id="task-collection" class="row collection">
 			{{#each task}}
 			{{> taskCollectionElement}}
