--- a/client/templates/index/index.html
+++ b/client/templates/index/index.html
@@ -1,10 +1,6 @@
 <template name="index">
 	{{#if needsWelcoming}}
-	{{> welcomeMessage}}
+	{{> welcome}}
 	{{/if}}
-	{{#if anyDue}}
-	<div id="calendar-card" class="card-panel">
-	{{> calendar}}
-	</div>
-	{{/if}}
+	{{> notifications}}
 </template>
