--- a/client/templates/groups/group.html
+++ b/client/templates/groups/group.html
@@ -1,4 +1,5 @@
 <template name="group">
+<p class="breadcrumbs"><a href="{{pathFor 'groups'}}">Groups</a> > {{group.name}}</p>
 	<h3><i class="mdi-social-group left"></i>{{group.name}}</h3>
 	<div class="card-panel">
 		<h4>
