--- a/client/templates/groups/groupMember.html
+++ b/client/templates/groups/groupMember.html
@@ -1,3 +1,5 @@
 <template name="groupMember">
-Group Member Reporting
+<p class="breadcrumbs"><a href="{{pathFor 'groups'}}">Groups</a> > <a href="{{pathFor 'groups'}}/{{groupId}}">{{groupName}}</a> > {{userName}}</p>
+<h4>Group Member Reporting</h4>
+Coming soon...
 </template>
