footer brought back

--- a/client/templates/modals/completedCalendarModal.html
+++ b/client/templates/modals/completedCalendarModal.html
@@ -27,3 +27,7 @@
 		{{> ReactiveFullcalendar options=calendarOptions}}
 	</div>
 </template>
+
+<template name="completedCalendarModalFooter">
+	<a href="#" class="close-modal black-text right">Close</a>
+</template>
