about copy init

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -1,4 +1,30 @@
 <template name="about">
-	<h3>About Taskurbate</h3>
-	<h4>Get off on tracking tasks</h4>
+	<h4><i class="mdi-action-speaker-notes left"></i>About</h4>
+	<div class="card-panel">
+		<p><strong>Get off on tracking tasks!</strong></p>
+		<p>Taskurbate is a tool to help you track your repetitive tasks.</p>
+		<p>You can choose three different types of schedules for tasks:
+			<ol>
+				<li>Adaptive: As you complete the task, the frequency of completion will intelligently update.</li>
+				<li>Lenient: Tasks will be due a set number of days after last completed.</li>
+				<li>Strict: Tasks will be due a set number of days after last due.</li>
+			</ol>
+		</p>
+		<p>Tasks can be anything you regularly do, it is entirely up to you what you want to track.</p>
+	</div>
+	<div class="card-panel">
+		<p><strong>Taskurbate mutually!</strong></p>
+		<p>With groups, you can share tasks with others:
+			<ul>
+				<li>-Track chores with housemates.</li>
+				<li>-Track dates with that special someone.</li>
+				<li>-Track caffeine runs in the office.</li>
+			</ul>
+		</p>
+	</div>
+	<div class="card-panel">
+		<p><strong>This is a work in progress!</strong></p>		
+		<p>There are many aspects of this application which are still being developed.</p>
+		<p>Feel free to send suggestions, bug fixes, praise, or pictures of kittens to its creator: <a href="mailto:contact@ianmceachern.com">Ian</a>.</p>
+	</div>
 </template>
