--- a/client/templates/groups/groups.html
+++ b/client/templates/groups/groups.html
@@ -9,7 +9,7 @@
 	{{> groupJoinCreate}}
 	{{else}}
 	<div class="card-panel">
-	<p>Please <a href="{{pathFor 'settings'}}">set a nickname</a> before joining/creating any groups.</p>
+	<p><a href="{{pathFor 'settings'}}">Set a nickname</a> before joining/creating any groups.</p>
 	</div>
 	{{/if}}
 </template>
