--- a/client/templates/index/welcome.html
+++ b/client/templates/index/welcome.html
@@ -1,10 +1,10 @@
 <template name="welcome">
 
 	<div class="row">
-		<div class="col s10 offset-s1">
+		<div class="col s12">
 			<h3>Welcome!</h3>
 		</div>
-		<div class="col s10 offset-s1">
+		<div class="col s12">
 			<div class="row">
 				{{#unless tags}}
 				<div class="col s12 m6 l4">
