combined tags into task listing

--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -10,7 +10,7 @@
 				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}"><i class="mdi-action-home"></i></a></li>
 				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}"><i class="{{tasksViewIcon}}"></i></a></li>
 				<li class="{{activeRoute 'groups'}}{{activeRoute 'group'}}{{activeRoute 'groupMember'}}"><a href="{{pathFor route='groups'}}"><i class="mdi-social-group"></i></a></li>
-				<li class="{{activeRoute 'settings'}}"><a href="{{pathFor route='settings'}}"><i class="mdi-action-settings"></i></a></li>
+				<li class="{{activeRoute 'solo'}}"><a href="{{pathFor route='solo'}}"><i class="mdi-social-person"></i></a></li>
 				<li><a href="#" class="logout"><i class="mdi-action-exit-to-app"></i></a></li>
 				{{else}}
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
@@ -23,11 +23,11 @@
 				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}">Home<i class="mdi-action-home right"></i></a></li>
 				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="{{tasksViewIcon}} right"></i></a></li>
 				<li class="{{activeRoute 'groups'}}{{activeRoute 'group'}}"><a href="{{pathFor route='groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
-				<li class="{{activeRoute 'settings'}}"><a href="{{pathFor route='settings'}}">Settings<i class="mdi-action-settings right"></i></a></li>
+				<li class="{{activeRoute 'solo'}}"><a href="{{pathFor route='solo'}}">Solo<i class="mdi-social-person right"></i></a></li>
 				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
 				{{else}}
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
-				<li class="{{activeRoute 'login'}}"><a href="{{pathFor route='login'}}">Login<i class="mdi-action-input right"></i></a></li>
+				<li class="{{activeRoute 'login'}}"><a href="{{pathFor route='login'}}">Login<i class="mdi-social-person right"></i></a></li>
 				{{/if}}
 			</ul>
 
