--- a/client/templates/groups/addGroupButton.html
+++ b/client/templates/groups/addGroupButton.html
@@ -1,5 +1,5 @@
-<template name="newTaskButton">
-	<div id="new-task-button" class="fixed-action-btn">
+<template name="addGroupButton">
+	<div id="add-group-button" class="fixed-action-btn trigger-modal">
     <a class="btn-floating btn-large red">
       <i class="large mdi-content-add"></i>
     </a>
