--- a/client/templates/groups/group.html
+++ b/client/templates/groups/group.html
@@ -2,18 +2,6 @@
 <p class="breadcrumbs"><a href="{{pathFor 'groups'}}">Groups</a> > {{group.name}}</p>
 	<h3><i class="mdi-social-group left"></i>{{group.name}}</h3>
 	<div class="card-panel">
-		<h4>
-			<i class="mdi-action-assignment left"></i>Tasks
-		</h4>
-		{{#if anyTasks}}
-		<ul class="row collection">
-			{{#each tasks}}		
-			{{> taskCollectionElement}}
-			{{/each}}
-		</ul>
-		{{/if}}
-	</div>
-	<div class="card-panel">
 		<h4><i class="mdi-social-person left"></i>Members</h4>
 		<ul class="row collection">
 			{{#each groupMember}}
@@ -22,10 +10,10 @@
 		</ul>
 	</div>
 	<div class="card-panel">
-		<h4><i class="mdi-image-style left"></i>Tags</h4>
-		<div class="row">
-		{{> tags}}
-		</div>
+		<h4>
+			<i class="mdi-action-assignment left"></i>Tasks
+		</h4>
+		{{> tasksByTag}}
 	</div>
-
+	{{> newTagOrTaskButton}}
 </template>
