fixed close modal button

--- a/client/templates/modals/addGroupModal.html
+++ b/client/templates/modals/addGroupModal.html
@@ -28,6 +28,6 @@
 		</form>
 		<button id="join-group" class="btn right">Join</button>
 		<button id="create-group" class="btn right hidden">Create</button>
-		<a href="#" class="black-text left">Cancel</a>
+		<a href="#" class="close-modal black-text left">Cancel</a>
 	</div>
 </template>
