--- a/client/templates/modals/newTaskModal.html
+++ b/client/templates/modals/newTaskModal.html
@@ -43,8 +43,8 @@
 				<input name="taskScheduleType" type="radio" id="adaptive" value="adaptive" checked>
 				<label for="adaptive">Adaptive</label>
 				<br><br>
-				<input name="taskScheduleType" type="radio" id="hybrid" value="hybrid">
-				<label for="hybrid">Lenient</label>
+				<input name="taskScheduleType" type="radio" id="lenient" value="lenient">
+				<label for="lenient">Lenient</label>
 				<br><br>
 				<input name="taskScheduleType" type="radio" id="strict" value="strict">
 				<label for="strict">Strict</label>
@@ -53,7 +53,7 @@
 				<br>
 				<div id="schedule-explanations">
 					<p id="adaptive-explanation" class="label">Due date will adapt based on how frequently it is completed.</p>
-					<p id="hybrid-explanation" class="label hidden">Due date will always be X days after it was last completed.</p>
+					<p id="lenient-explanation" class="label hidden">Due date will always be X days after it was last completed.</p>
 					<p id="strict-explanation" class="label hidden">Due date will always be X days after last due.</p>
 				</div>
 				<div id="schedule-inputs">
