group/solo listing now displays tags when no tasks

--- a/client/templates/tasks/tasksByTag.html
+++ b/client/templates/tasks/tasksByTag.html
@@ -1,5 +1,5 @@
 <template name="tasksByTag">
-		{{#if anyTasks}}
+		{{#if anyTaskOrTag}}
 
 		<ul id="default-ul" class="row collection">
 			<li class="collection-item">
