--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -1,4 +1,11 @@
 <template name="navbar">
+<ul id="groups-dropdown" class="dropdown-content">
+	{{#each groups}}
+  <li><a href="{{pathFor 'group'}}">{{name}}</a></li>
+	{{/each}}
+  <li class="divider"></li>
+  <li><a href="#" class="add-group">Add Group</a></li>
+</ul>
 	<nav class="indigo lighten-2">
 		<div class="nav-wrapper">
 			<a href="{{pathFor route='index'}}" class="brand-logo">Taskurbate</a>
@@ -7,11 +14,18 @@
 
 
 				{{#if currentUser}}
-				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}"><i class="mdi-action-home"></i></a></li>
-				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}"><i class="{{tasksViewIcon}}"></i></a></li>
-				<li class="{{activeRoute 'groups'}}{{activeRoute 'group'}}{{activeRoute 'groupMember'}}"><a href="{{pathFor route='groups'}}"><i class="mdi-social-group"></i></a></li>
-				<li class="{{activeRoute 'solo'}}"><a href="{{pathFor route='solo'}}"><i class="mdi-social-person"></i></a></li>
-				<li><a href="#" class="logout"><i class="mdi-action-exit-to-app"></i></a></li>
+				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}"><i class="mdi-action-home left"></i>Home</a></li>
+				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}"><i class="{{tasksViewIcon}} left"></i>Tasks</a></li>
+				<li class="{{activeRoute 'solo'}}"><a href="{{pathFor route='solo'}}"><i class="mdi-social-person left"></i>Solo</a></li>
+				<li class="{{activeRoute 'groups'}}{{activeRoute 'group'}}{{activeRoute 'groupMember'}}">
+					{{#if groups}}
+					<a href="#" class="dropdown-button" data-activates="groups-dropdown"><span><i class="mdi-social-group left"></i>Groups<i class="mdi-navigation-arrow-drop-down right"></i></span></a>
+					{{initDropdown}}
+					{{else}}
+					<a href="#" class="add-group"><i class="mdi-social-group left"></i>Groups<i class="mdi-content-add right"></i></a>					
+					{{/if}}
+				</li>
+				<li><a href="#" class="logout"><i class="mdi-action-exit-to-app left"></i>Logout</a></li>
 				{{else}}
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
 				<li class="{{activeRoute 'login'}}"><a href="{{pathFor route='login'}}">Login<i class="mdi-social-person right"></i></a></li>
@@ -22,8 +36,9 @@
 				{{#if currentUser}}
 				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}">Home<i class="mdi-action-home right"></i></a></li>
 				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="{{tasksViewIcon}} right"></i></a></li>
-				<li class="{{activeRoute 'groups'}}{{activeRoute 'group'}}"><a href="{{pathFor route='groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
 				<li class="{{activeRoute 'solo'}}"><a href="{{pathFor route='solo'}}">Solo<i class="mdi-social-person right"></i></a></li>
+				<li class="{{activeRoute 'groups'}}{{activeRoute 'group'}}"><a href="{{pathFor route='groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
+
 				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
 				{{else}}
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
