--- a/client/templates/index/notifications.html
+++ b/client/templates/index/notifications.html
@@ -1,6 +1,45 @@
 <template name="notifications">
 	<div class="card-panel">
 		<h4>Notifications:</h4>
-		Coming soon...
+		{{#if anyNotifications}}
+		{{#if overdueTasks}}
+		<ul class="collection with-header row">
+			<li class="collection-header">
+				<strong>Overdue tasks:</strong>
+				{{#each overdueTasks}}
+				{{> taskCollectionElement}}
+				{{/each}}
+			</li>
+		</ul>
+		{{/if}}
+		{{#if dueTodayTasks}}
+		<ul class="collection with-header row">
+			<li class="collection-header">
+				<strong>Tasks due today:</strong>
+				{{#each dueTodayTasks}}
+				{{> taskCollectionElement}}
+				{{/each}}
+			</li>
+		</ul>		
+		{{/if}}
+		{{#if notifications}}
+		<ul class="collection row">
+			{{#each notifications}}
+			<li>
+				<div class="row">
+					<div class="col s10 m11">
+						{{content}}
+					</div>
+					<div class="col s2 m1">
+						<a href="#" class="close-notification"><i class="mdi-content-remove"></i></a>
+					</div>
+				</div>
+			</li>
+			{{/each}}
+		</ul>
+		{{/if}}
+		{{else}}
+		<strong>You're all caught up, keep up the good work!</strong>
+		{{/if}}
 	</div>
 </template>
