group notifications init

--- a/client/templates/index/notifications.html
+++ b/client/templates/index/notifications.html
@@ -25,13 +25,19 @@
 		{{#if notifications}}
 		<ul class="collection row">
 			{{#each notifications}}
-			<li>
+			<li class="collection-item">
 				<div class="row">
 					<div class="col s10 m11">
-						{{content}}
+						{{#if completedNotification}}
+						{{#with data}}
+						<a href="/groups/{{group.id}}"><strong><i class="mdi-social-group"></i>{{group.name}}</strong></a>:<br>
+						<a href="/groups/{{group.id}}/member/{{user.id}}">{{user.name}}</a> completed
+						<a href="tasks/{{task.id}}">{{task.name}}</a> on {{formattedDatetime at}}
+						{{/with}}
+						{{/if}}
 					</div>
 					<div class="col s2 m1">
-						<a href="#" class="close-notification"><i class="mdi-content-remove"></i></a>
+						<a href="#" class="close-notification black-text"><i class="mdi-navigation-close small"></i></a>
 					</div>
 				</div>
 			</li>
