about copy update

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -3,12 +3,12 @@
 	<div class="card-panel">
 		<p><strong>Get off on tracking tasks!</strong></p>
 		<p>Taskurbate is a tool to help you track your repetitive tasks.</p>
-		<p>You can choose three different types of schedules for tasks:
-			<ol>
-				<li>Adaptive: As you complete the task, the frequency of completion will intelligently update.</li>
-				<li>Lenient: Tasks will be due a set number of days after last completed.</li>
-				<li>Strict: Tasks will be due a set number of days after last due.</li>
-			</ol>
+		<p>It has been designed specifically for irregular tasks which you want more data about, for example:
+			<ul>
+				<li>Clip your nails</li>
+				<li>Cook a meal</li>
+				<li>Finish a book</li>
+			</ul>
 		</p>
 		<p>Tasks can be anything you regularly do, it is entirely up to you what you want to track.</p>
 	</div>
