tags now highlighted

--- a/client/templates/tasks/tasksByTag.html
+++ b/client/templates/tasks/tasksByTag.html
@@ -2,7 +2,7 @@
 		{{#if anyTaskOrTag}}
 
 		<ul id="default-ul" class="row collection">
-			<li class="collection-item">
+			<li class="collection-item indigo lighten-3">
 				<div class="row">
 					<span><i class="mdi-action-label-outline small left"></i><strong>Misc.</strong></span>
 					<span id="modify-default" class="right">
@@ -19,7 +19,7 @@
 		</ul>
 		{{#each tags}}
 		<ul id="{{_id}}-ul" class="row collection">
-			<li class="collection-item">
+			<li class="collection-item indigo lighten-3">
 				<div id="{{_id}}-display" class="row">
 					<span><i class="mdi-action-label-outline small left"></i> <strong>{{name}}</strong></span>
 						<a href="#" class="edit-tag black-text"><i class="mdi-content-create tiny"></i></a>
