--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -8,9 +8,19 @@
   <li><a href="#" class="add-group">Add Group</a></li>
 </ul>
 	<nav class="indigo lighten-2">
-		<div class="nav-wrapper">
-			<a href="{{pathFor route='index'}}" class="brand-logo">Taskurbate</a>
+    <div id="nav-search" class="nav-wrapper hidden">
+      <form id="search-form">
+        <div class="input-field">
+          <input id="search" type="search" required>
+          <label for="search"><i class="mdi-action-search"></i></label>
+          <i class="mdi-navigation-close"></i>
+        </div>
+      </form>
+    </div>
+		<div id="nav-bar" class="nav-wrapper">
+			<a href="/" class="brand-logo">Taskurbate</a>
 			<a href="#" class="button-collapse right" data-activates="mobile-side-nav"><i class="mdi-navigation-menu"></i></a>
+
 			<ul class="right hide-on-med-and-down">
 
 
@@ -55,5 +65,6 @@
 			</ul>
 
 		</div><!--/.nav-wrapper -->
+
 	</nav>
 </template>
