--- a/client/templates/tasks/tasks.html
+++ b/client/templates/tasks/tasks.html
@@ -27,14 +27,16 @@
 			<h4>
 				<i class="{{tasksViewIcon}} left"></i>Tasks
 				<a href="#" class="show-task-filters black-text right"><i class="mdi-content-filter-list"></i></a>
+				{{#unless searchingFor}}
 				<a href="#" class="search-tasks black-text right"><i class="mdi-action-search"></i></a>
+				{{/unless}}
 			</h4>
 		</div>
 		{{#if searchingFor}}
     <div class="row">
 			<div  id="tasks-search-display" class="col s12 m6 l4 offset-m3 offset-l4">
 				<h5>
-					<i class="mdi-action-search left"></i>{{searchingFor}}
+					<span id="searching-for"><i class="mdi-action-search left"></i>{{searchingFor}}</span>
 					<a href="#" class="clear-search black-text right"><i class="mdi-navigation-close"></i></a>
 				</h5>
 			</div>
