instant search on desktop only

--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -11,7 +11,7 @@
     <div id="nav-search" class="nav-wrapper hidden">
       <form id="search-form">
         <div class="input-field">
-          <input id="search" type="search" required>
+          <input id="search" type="search">
           <label for="search"><i class="mdi-action-search"></i></label>
           <i class="mdi-navigation-close"></i>
         </div>
