--- a/client/templates/modals/completedCalendarModal.html
+++ b/client/templates/modals/completedCalendarModal.html
@@ -29,5 +29,5 @@
 </template>
 
 <template name="completedCalendarModalFooter">
-	<a href="#" class="close-modal black-text right">Close</a>
+	<a href="#" class="close-modal  waves-effect waves-green btn-flat right">Close</a>
 </template>
