--- a/client/templates/modals/backdateTaskModal.html
+++ b/client/templates/modals/backdateTaskModal.html
@@ -19,6 +19,6 @@
 </template>
 
 <template name="backdateTaskModalFooter">
-	<a href="#" class="close-modal black-text left">Cancel</a>
-	<a href="#" class="submit-backdate-task black-text right">Backdate Task</a>
+	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
+	<a href="#" class="submit-backdate-task waves-effect waves-green btn-flat right">Backdate Task</a>
 </template>
