--- a/client/templates/modals/completeTaskModal.html
+++ b/client/templates/modals/completeTaskModal.html
@@ -12,6 +12,6 @@
 </template>
 
 <template name="completeTaskModalFooter">
-	<a href="#" class="close-modal black-text left">Cancel</a>
-	<a href="#" class="complete-task-modal black-text right">Complete Task</a>
+	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
+	<a href="#" class="complete-task-modal waves-effect waves-green btn-flat right">Complete Task</a>
 </template>
