--- a/client/templates/modals/graphTaskModal.html
+++ b/client/templates/modals/graphTaskModal.html
@@ -4,6 +4,6 @@ Coming soon...
 </template>
 
 <template name="graphTaskModalFooter">
-	<a href="#" class="close-modal black-text right">Close</a>
+	<a href="#" class="close-modal  waves-effect waves-green btn-flat right">Close</a>
 
 </template>
