--- a/client/templates/modals/leaveGroupModal.html
+++ b/client/templates/modals/leaveGroupModal.html
@@ -5,6 +5,6 @@
 </template>
 
 <template name="leaveGroupModalFooter">
-	<a href="#" class="close-modal black-text left">Cancel</a>
-	<a href="#" class="leave-group black-text right">Leave Group</a>
+	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
+	<a href="#" class="leave-group waves-effect waves-green btn-flat right">Leave Group</a>
 </template>
