--- a/client/templates/modals/addGroupModal.html
+++ b/client/templates/modals/addGroupModal.html
@@ -26,8 +26,8 @@
 				<label for="group-pass-pass-configm">Confirm password</label>
 			</div>
 		</form>
-		<a href="#" id="join-group" class="waves-effect waves-green btn-flat right">Join</button>
-		<a href="#" id="create-group" class="waves-effect waves-green btn-flat right hidden">Create</button>
+		<a href="#" id="join-group" class="waves-effect waves-green btn-flat right">Join</a>
+		<a href="#" id="create-group" class="waves-effect waves-green btn-flat right hidden">Create</a>
 		<a href="#" class="close-modal  waves-effect waves-red btn-flat left">Cancel</a>
 	</div>
 </template>
