--- a/client/templates/tasks/tasks.html
+++ b/client/templates/tasks/tasks.html
@@ -65,6 +65,21 @@
 		{{> taskCollectionElement}}
 		{{/each}}
 	</ul>
+	{{#if moreThanOnePage}}
+	<div class="row center-align">
+	<ul class="pagination">
+		<li class="{{firstPage}} waves-effect">
+			<a href="?page={{prevPage}}">
+				<i class="mdi-navigation-chevron-left"></i>
+			</a>
+		</li>
+		{{#each page}}
+    <li class="{{activePage}}"><a href="?page={{num}}">{{num}}</a></li>
+		{{/each}}
+    <li class="{{lastPage}} waves-effect"><a href="?page={{nextPage}}"><i class="mdi-navigation-chevron-right"></i></a></li>
+	</ul>
+	</div>
+	{{/if}}
 </template>
 
 <template name="taskCollectionElement">
